Menu top gap fix

--- a/docroot/sites/all/themes/ambitious/sass/general.scss
+++ b/docroot/sites/all/themes/ambitious/sass/general.scss
@@ -958,7 +958,7 @@ article.node-223806 {
     //padding-top: 15px;
     // Is this commented code needed?
     padding-top: 0px;
-    margin-top: 34px;
+    margin-top: 10px;
 
     @include breakpoint($mobile) {
       padding-top: 0px;
